--- a/style.css
+++ b/style.css
@@ -4,19 +4,20 @@
 
 
 .dark_blue {
-    background-color: #233142;
-    height: 300px;
+    background-color:  #4f9da6;
+    height: 100px;
     width: 100%
 }
 
 .light_blue {
-    background-color: #4f9da6;
-    height: 300px;
+    background-color:#233142;
+    height: 500px;
     width: 100%;
     margin-bottom: 0px;
 }
 
 body {
+    background-color:  #4f9da6;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -24,6 +25,9 @@ body {
 
 p {
     align-content: center;
+    font-family: 'Concert One', cursive;
+    color: #ff5959;
+    font-size: 40px;
 }
 
 .me_img {
@@ -31,8 +35,26 @@ p {
 }
 
 img {
-    margin-top: 50px;
+    margin-top: 30px;
     border-radius: 50%;
     height: 800px;
     margin-left: -100px;
+}
+
+.intro {
+    margin-left: 750px;
+}
+
+.name {
+    font-size: 50px;
+}
+
+.intro_para {
+    font-size: 30px;
+}
+
+ul {
+    font-family: 'Concert One', cursive;
+    color: #ff5959;
+    font-size: 30px;
 }
